--- a/gym-front/index.html
+++ b/gym-front/index.html
@@ -9,7 +9,7 @@
     <div id="app">
         <!-- Your app will be mounted here -->
         <div id="header">
-            <h2>FitnessBooking</h2>
+            <h2>Fitness Booking !!</h2>
             <h3>Welcome back</h3>
         </div>
         <div id="auth-section">
