user_main_page problem

--- a/gym-front/src/html/user_main_page.html
+++ b/gym-front/src/html/user_main_page.html
@@ -5,9 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Main Page</title>
+    <script src="../js/api/user_main_page.js" defer></script>
 </head>
 <body>
-    <h1>Here will be main page</h1>
+<h1>Here will be main page</h1>
+<div>
+    <h3>Some table here</h3>
+</div>
+<div>
+    <button type="button" id='to-admin-page'>To Admin Page</button>
+</div>
 </body>
 </html>
